crates/astroforge-ir/tests/snapshots/snapshot_page__app_module_with_lifecycle.snap
---
source: crates/astroforge-ir/tests/snapshot_page.rs
expression: "AppModule { lifecycle }"
---
{
  "lifecycle": {
    "onCreate": "console.log('app created');",
    "onDestroy": "console.log('app destroyed');"
  }
}
