crates/astroforge-ir/tests/snapshots/snapshot_page__style_table_with_multi_selectors_and_kebab_props.snap
---
source: crates/astroforge-ir/tests/snapshot_page.rs
expression: style
---
{
  "rules": [
    {
      "selectors": [
        {
          "kind": "class",
          "name": "demo-page"
        },
        {
          "kind": "class",
          "name": "alt-page"
        }
      ],
      "declarations": {
        "flex-direction": "column",
        "align-items": "center"
      }
    }
  ]
}
